@@ -290,3 +290,6 @@
 	* Changed DEFAULT_SERVER_USERNAME to "".
 2017-04-18 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.4.
+2017-05-10 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in rdlogeditb(1) that caused log header data to fail
+	to be saved from the Edit Log dialog. [GitHub issue #000001].
